Website headers tightened, and a broad SAST layer with fixtures that prove it works
KQ-09 and KQ-10.

KQ-09. frame-ancestors goes from 'self' to 'none' and X-Frame-Options from SAMEORIGIN
to DENY: nothing on this static site embeds any other part of it, so same-origin
framing was permission granted for a use case that does not exist. HSTS gains
includeSubDomains, after actually inventorying what it would cover — DNS has exactly
three names (khandaq.org, push.khandaq.org, mail.khandaq.org), there is no wildcard
record, each holds its own valid certificate, and all three already answer :80 with a
301 to https. The directive therefore describes what is already true rather than
imposing something new, which is the only safe way to turn it on. Still not preload:
that is a submission to a list baked into browser binaries, effectively irreversible,
and deserves its own decision rather than being a side effect of closing a finding.
Deployed and confirmed on the live site.

KQ-10. The repository's regression gates are good and are all shaped by defects
somebody already understood. CodeQL (advisory for its first cycle, as the review
asks) covers Java/Kotlin, Python, JavaScript and the workflows; C/C++ is deliberately
absent because CodeQL needs to watch a real compilation and the desktop's Qt
toolchain is not on the runner — said here rather than left as a silent gap. Semgrep
carries the rest: six repository-specific rules including Objective-C and Swift,
which CodeQL does not reach.

Every rule has a fixture and scripts/check-sast-fixtures.py asserts each one fires on
it, because a rule nobody has watched fire reads as coverage without being any. That
caught two rules of my own that matched nothing — a YAML flow-sequence swallowing an
Objective-C pattern, and `Random` vs `java.util.Random` being different tokens
without type resolution.

The scan then found four things in the real tree, and each was followed rather than
suppressed:

  * ToolBox.getIfs() built three shell com